templates/canton-domain_template.yaml
---
# Source: canton-domain/templates/networkpolicy/from-all-to-sequencer-api-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-canton-domain-allow-sequencer-api-metrics
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: sequencer
      canton.io/domain: mydomain
  policyTypes:
  - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 4401
---
# Source: canton-domain/templates/networkpolicy/from-same-namespace-to-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-canton-domain-allow-same-namespace
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
---
# Source: canton-domain/templates/manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-canton-domain-manager
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: manager
spec:
  type: ClusterIP
  ports:
    - name: admin
      protocol: TCP
      port: 4801
      targetPort: admin
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/component: manager
---
# Source: canton-domain/templates/mediator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-canton-domain-mediator
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: mediator
spec:
  type: ClusterIP
  ports:
    - name: admin
      protocol: TCP
      port: 4602
      targetPort: admin
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/component: mediator
---
# Source: canton-domain/templates/sequencer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-canton-domain-sequencer
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: sequencer
spec:
  type: ClusterIP
  ports:
    - name: public
      protocol: TCP
      port: 4401
      targetPort: public
    - name: admin
      protocol: TCP
      port: 4402
      targetPort: admin
  sessionAffinity: "ClientIP"
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/component: sequencer
---
# Source: canton-domain/templates/manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-canton-domain-manager
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: canton-domain
      app.kubernetes.io/component: manager
  strategy:
    type: "Recreate"
  template:
    metadata:
      annotations:
        "checksum/config": "c4e5b7586fea184b3b3b348009b8dbf93e0f9d1f14bede4423789f9d4574e569"
        "checksum/env": "f291aef8f6a495fa140ef9ad897a8cc8b6e224ba6466e2a79c68473a5496eb6d"
        "checksum/secret": "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: canton-domain
        app.kubernetes.io/part-of: canton
        app.kubernetes.io/version: 2.8.1
        canton.io/domain: mydomain
        helm.sh/chart: canton-domain-0.6.1
        app.kubernetes.io/component: manager
    spec:
      serviceAccountName: release-name-canton-domain-manager
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: Always
        sysctls: []
      containers:
        - name: canton
          image: "digitalasset-docker.jfrog.io/canton-enterprise:2.8.1"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            readOnlyRootFilesystem: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          args:
            - "daemon"
            - "--log-profile=container"
            - "--log-encoder=plain"
            - "--log-level-root=INFO"
            - "--log-level-canton=INFO"
            - "--log-level-stdout=INFO"
            - "--config=/etc/canton/manager.conf"
          ports:
            - name: admin
              containerPort: 4801
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
          livenessProbe:
            grpc:
              port: 4803
              service: "liveness"
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3
          readinessProbe:
            grpc:
              port: 4803
              service: ""
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /etc/canton
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: release-name-canton-domain-manager
---
# Source: canton-domain/templates/mediator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-canton-domain-mediator
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: mediator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: canton-domain
      app.kubernetes.io/component: mediator
  strategy:
    type: "Recreate"
  template:
    metadata:
      annotations:
        "checksum/config": "e0bc660df32b2f59600465e47842ffe7de0f487316b6babfdc48c0f6e90e2f9f"
        "checksum/env": "2340464da0a7ec1ebb51730f71dd2c5d0912adcd8fa1c4469e436aa89aa16d21"
        "checksum/secret": "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: canton-domain
        app.kubernetes.io/part-of: canton
        app.kubernetes.io/version: 2.8.1
        canton.io/domain: mydomain
        helm.sh/chart: canton-domain-0.6.1
        app.kubernetes.io/component: mediator
    spec:
      serviceAccountName: release-name-canton-domain-mediator
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: Always
        sysctls: []
      containers:
        - name: canton
          image: "digitalasset-docker.jfrog.io/canton-enterprise:2.8.1"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            readOnlyRootFilesystem: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          args:
            - "daemon"
            - "--log-profile=container"
            - "--log-encoder=plain"
            - "--log-level-root=INFO"
            - "--log-level-canton=INFO"
            - "--log-level-stdout=INFO"
            - "--config=/etc/canton/mediator.conf"
          ports:
            - name: admin
              containerPort: 4602
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
          livenessProbe:
            grpc:
              port: 4603
              service: "liveness"
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3
          readinessProbe:
            grpc:
              port: 4603
              service: ""
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /etc/canton
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: release-name-canton-domain-mediator
---
# Source: canton-domain/templates/sequencer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-canton-domain-sequencer
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: sequencer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: canton-domain
      app.kubernetes.io/component: sequencer
  template:
    metadata:
      annotations:
        "checksum/config": "ae1f4467011753582515014e601339f2b43276a7f3aaac17efc8e29328ea26c0"
        "checksum/env": "637af6df1b7b8e994d2785af6cc683feab17bf7b0385b45d3b9081b22d4d4154"
        "checksum/secret": "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: canton-domain
        app.kubernetes.io/part-of: canton
        app.kubernetes.io/version: 2.8.1
        canton.io/domain: mydomain
        helm.sh/chart: canton-domain-0.6.1
        app.kubernetes.io/component: sequencer
    spec:
      serviceAccountName: release-name-canton-domain-sequencer
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: Always
        sysctls: []
      containers:
        - name: canton
          image: "digitalasset-docker.jfrog.io/canton-enterprise:2.8.1"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            readOnlyRootFilesystem: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          args:
            - "daemon"
            - "--log-profile=container"
            - "--log-encoder=plain"
            - "--log-level-root=INFO"
            - "--log-level-canton=INFO"
            - "--log-level-stdout=INFO"
            - "--config=/etc/canton/sequencer.conf"
          ports:
            - name: public
              containerPort: 4401
            - name: admin
              containerPort: 4402
          resources:
            limits:
              cpu: 2
              memory: 3Gi
            requests:
              cpu: 500m
          livenessProbe:
            grpc:
              port: 4403
              service: "liveness"
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3
          readinessProbe:
            grpc:
              port: 4403
              service: ""
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /etc/canton
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: release-name-canton-domain-sequencer
